--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,7 +5,8 @@ COPY . .
 RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=$GOARCH go build -o main .
 
-FROM alpine:latest  
+## using alpine:latest for convenience; best practice is to pin the version
+FROM alpine:latest
 RUN addgroup -S app && adduser -S -h /app app -G app
 WORKDIR /app
 COPY --from=builder /app/main .
